# SCFNN

./: LICENSE  README.md
4GHDNNP/train_test_Hirshfeld/: input_1.nn.charge  input_1.nn.short  input_2.nn.charge  input_3.nn.charge
4GHDNNP/train_test_Mulliken/: input_2.nn.short
MDcode/BP/: main_final_twobath.cpp
MDcode/SCFNN/: main_final_twobath.cpp
MDcode/finitefield/: CMakeLists.txt  main_final_twobath.cpp
examples/KirkwoodGfactor/Deq0/: CMakeLists.txt  main_final_twobath.cpp
examples/KirkwoodGfactor/Deq0/demo/: E_hist.txt  Hxyz.txt  Hxyz_final.txt  MD  Oxyz.txt  Oxyz_final.txt  axyz_final.txt  box.txt  force_hist.txt  force_peturb.txt  run.sh  temp_Econv_hist.txt  vxyz_final.txt  vxyz_hist.txt  wxyz_hist.txt  xyz_hist.txt
examples/KirkwoodGfactor/Eeq0/: main_final_twobath.cpp
examples/KirkwoodGfactor/Eeq0/demo/: E_hist.txt  Hxyz.txt  Hxyz_final.txt  MD  Oxyz.txt  Oxyz_final.txt  axyz_final.txt  force_hist.txt  force_peturb.txt  run.sh  (+5 more)
examples/LiquidVapor/: main_final_twobath.cpp
examples/LiquidVapor/demo/: E_hist.txt  Hxyz.txt  Hxyz_final.txt  MD  Oxyz.txt  Oxyz_final.txt  axyz_final.txt  box.txt  force_hist.txt  force_peturb.txt  temp_Econv_hist.txt  vxyz_final.txt  vxyz_hist.txt  wxyz_hist.txt  xyz_hist.txt
train_test/: assemble_data.py  assemble_data_test.py  bad_configurations.txt  get_Ewald.py  main.py  main_BPonly.py  main_test.py  parameters.py  produce_features.py  produce_features_d_new.cpp  produce_features_test.py  rotation_neighbour_dist_functions.py  run_getfeatures.sh  test_networks.py  train_networks.py  useful_functions.py
(+10 files in other folders)
