cmake_minimum_required(VERSION 3.0.0)
project(MD VERSION 0.1.0)
#add_compile_options(-no-multibyte-chars)
#ADD_DEFINITIONS(-DUNICODE)
OPTION (USE_OpenMP "Use OpenMP" ON)
IF(USE_OpenMP)
  FIND_PACKAGE(OpenMP)
  IF(OPENMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -qopenmp")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp")
  ENDIF()
ENDIF()
#add_compile_options(-mcmodel=medium)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -mcmodel=medium")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -mcmodel=medium")
list(APPEND CMAKE_PREFIX_PATH "/dssg/home/gaoang/finitefield/libtorch")

find_package(Torch REQUIRED)

add_executable(MD main_final_twobath.cpp)
target_link_libraries(MD "${TORCH_LIBRARIES}")
set_property(TARGET MD PROPERTY CXX_STANDARD 14)
